-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
None
-
fb9589070 (dev), 7c5c7e3cb (6.5)
When image property doesn't have image source set, there is still "Image { ... }" element created for it. Remove this, sometimes image properties default to empty so unessary image element should not be exported.
| For Gerrit Dashboard: QTBUG-109852 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 452309,2 | Don't create images without source | dev | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |
| 452997,2 | Don't create images without source | 6.5 | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |