Don't create images without source

Sometimes image property doesn't have default value. In these cases,
make the property point to null and don't create Image element.
Also unify the image element naming code.

Task-number: QTBUG-109852
Pick-to: 6.5
Change-Id: I5fc51b8febe08bdab3157ccfc98a6afb27266aa9
Reviewed-by: Amr Elsayed <amr.elsayed@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>